<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="26sp"
            android:id="@+id/textView2" android:textStyle="bold" android:textColor="@color/primary_text"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="spread" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/user_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            style="@style/description" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/imageView"/>
    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:id="@+id/imageView"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:scaleType="centerCrop"
            android:src="@drawable/michael" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/divider3" android:layout_marginTop="8dp"
    />
    <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintBottom_toTopOf="@+id/textView10"/>
    <TextView
            android:text="@string/followers_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            style="@style/title_number" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView7" android:textAlignment="center"/>
    <TextView
            android:text="@string/posts_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/title_number"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="@+id/textView3"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/following_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            style="@style/title_number"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="@+id/textView3"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/posts_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            style="@style/description"
            app:layout_constraintTop_toTopOf="@+id/textView7" app:layout_constraintBottom_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/followers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            style="@style/description" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/divider2"/>
    <TextView
            android:text="@string/following_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            style="@style/description"
            app:layout_constraintBottom_toBottomOf="@+id/textView7" app:layout_constraintTop_toTopOf="@+id/textView7"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintBottom_toTopOf="@+id/textView9"/>
    
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.33576643"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.66"/>
    <TextView
            android:text="@string/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:textSize="20sp" android:textColor="@color/primary_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/divider"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/website_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            style="@style/title" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView11"/>
    <TextView
            android:text="@string/website_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="8dp"
            style="@style/description" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView14"/>
    <TextView
            android:text="@string/email_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            style="@style/title" app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="@string/email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            style="@style/description"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"/>
    <TextView
            android:text="@string/phone_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="8dp"
            style="@style/title" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView15"/>
    <TextView
            android:text="@string/phone_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="8dp"
            style="@style/description" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            style="@style/title" app:layout_constraintTop_toTopOf="@+id/textView14"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"/>
    <TextView
            android:text="@string/location_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            style="@style/description"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_person_add_black_24dp"
            android:id="@+id/floatingActionButton"
            app:backgroundTint="@color/accent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent" android:focusable="true"
    />
    <ImageButton
            android:layout_height="32dp" app:srcCompat="@drawable/ic_call_black_24dp"
            android:id="@+id/imageButton2"
            style="@android:style/Widget.ImageButton" android:scaleType="centerCrop"
            android:background="@android:drawable/menuitem_background"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintTop_toTopOf="@+id/imageView"
            android:contentDescription="@string/call" android:layout_width="32dp"/>
    <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp" app:srcCompat="@drawable/ic_message_black_24dp"
            android:id="@+id/imageButton3"
            android:background="@android:drawable/menuitem_background"
            app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:contentDescription="@string/message"
            style="@android:style/Widget.DeviceDefault.ImageButton" android:scaleType="centerCrop"/>

</androidx.constraintlayout.widget.ConstraintLayout>